--- a/_posts/2024-10-12-mlp-jax.md
+++ b/_posts/2024-10-12-mlp-jax.md
@@ -1,11 +1,11 @@
 ---
-title: "Bigram Language Model with JAX"
+title: "MLP Language Model with JAX"
 categories:
   - LLM
 tags:
   - JAX, TPU
 ---
-![Picture](/assets/bigram/image.png_posts/2024-10-05-bigram-jax.md)
+![Picture](/assets/mlp_nlp/image.png)
 
 # Introduction
 
