--- a/_posts/2024-10-12-mlp-jax.md
+++ b/_posts/2024-10-12-mlp-jax.md
@@ -117,7 +117,7 @@ artha
 jaamini
 tina
 ```
-This looks much much better than the results from the BIKE RAM model if you compare them. They sound really name-like and maybe some of them are not real real names but for example there is Tina, there is Karlin, there is Corel and all of these sound at least to me very name-ish. 
+This looks much much better than the results from the bigram model if you compare them. They sound really name-like and maybe some of them are not real real names but for example there is Tina, there is Karlin, there is Corel and all of these sound at least to me very name-ish. 
 So that's it for now with the blog post. As before, this is heavily influenced by the lecture of [Andrej Karpathy](https://www.youtube.com/watch?v=TCH_1BHY58I&list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ&index=3). 
 The experiments were performed on a TPU provided by [TRC research program](https://sites.research.google/trc/about/).
 If you have questions or suggestions, please let me know. If you are interested in the code, you can find it at [my gitub](https://github.com/simveit/mlp_language_modelling_jax/tree/main).
